CHECKPOINT v0.2 All commands passed